chore: remove unused profiles, modify base profile

--- a/mkosi.images/base/mkosi.conf.d/00-cli-tools.conf
+++ b/mkosi.images/base/mkosi.conf.d/00-cli-tools.conf
@@ -6,6 +6,7 @@ Packages=bash
     diffutils
     # Use run0 instead.
     #doas
+    sudo
     fdisk
     gdisk
     findutils
@@ -20,3 +21,8 @@ Packages=bash
     file
     tree
     vim-tiny
+    # zsh
+    zsh
+    zsh-autosuggestions
+    zsh-syntax-highlighting
+
