--- a/mkosi.images/base/mkosi.profiles/desktop/mkosi.conf
+++ b/mkosi.images/base/mkosi.profiles/desktop/mkosi.conf
@@ -10,3 +10,36 @@ Packages=
         accountsservice
         upower
         rtkit
+
+        # task-desktop + gnome + gdm3
+        task-gnome-desktop
+        gnome-audio
+        # Video player, or use totem.
+        showtime
+        # PDF reader, or use evince.
+        papers
+        # Terminal emulator, or use gnome-terminal with nautilus-extension-gnome-terminal.
+        gnome-console
+        # Other GNOME toys have no alternative.
+        gnome-sound-recorder
+        file-roller
+        gnome-tweaks
+        # Orca needs this.
+        speech-dispatcher-espeak-ng
+        # OOBE helper, we use systemd-firstboot.
+        # gnome-initial-setup
+        # Mail client, or use thunderbird.
+        # evolution
+        # Qt configuration tool
+        qt5ct
+        qt6ct
+        # Themes
+        adwaita-qt
+        adwaita-qt6
+        adwaita-icon-theme
+        adwaita-icon-theme-legacy
+        gnome-themes-extra
+        # Classic
+        gnome-classic
+        # Plymouth
+        plymouth
