chore: split into Server and Desktop images

--- a/mkosi.images/desktop/mkosi.conf
+++ b/mkosi.images/desktop/mkosi.conf
@@ -1,4 +1,13 @@
-# SPDX-License-Identifier: LGPL-2.1-or-later
+[Config]
+Dependencies=base
+
+[Output]
+SplitArtifacts=no
+Format=disk
+Output=DayoDesktop
+
+[Content]
+BaseTrees=%O/base
 
 [Content]
 Packages=
