chore: move chromium to desktop, remove sysext

--- a/mkosi.images/desktop/mkosi.conf
+++ b/mkosi.images/desktop/mkosi.conf
@@ -52,3 +52,10 @@ Packages=
         gnome-classic
         # Plymouth
         plymouth
+
+        # Chromium
+        chromium
+        chromium-sandbox
+        chromium-l10n
+        chromium-driver
+        chromium-shell
