chore: default to trixie

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -5,6 +5,12 @@ History=yes
 CacheDirectory=mkosi.cache
 Incremental=yes
 
+[Distribution]
+Distribution=debian
+Release=trixie
+RepositoryKeyCheck=no
+Repositories=main,contrib,non-free,non-free-firmware
+
 [Output]
 OutputDirectory=mkosi.output
 SplitArtifacts=no
