chore: hopefully fix ci

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -15,6 +15,7 @@ Repositories=main,contrib,non-free,non-free-firmware
 OutputDirectory=mkosi.output
 SplitArtifacts=no
 Format=disk
+Output=DayoServer
 
 [Content]
 Locale=en_US.UTF-8
