chore: hopefully fix ci

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -13,7 +13,7 @@ jobs:
         uses: systemd/mkosi@da814d96341828ba573821577e2b973cdc16f91f
       - name: summary
         run: |
-          mkosi summary --no-pager
+          mkosi -d debian -r trixie summary --no-pager
       - name: build server
         run: |
           mkosi -d debian -r trixie build
