--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,6 +11,9 @@ jobs:
     steps:
       - name: setup-mkosi
         uses: systemd/mkosi@da814d96341828ba573821577e2b973cdc16f91f
+      - name: version
+        run: |
+          mkosi --version
       - name: summary
         run: |
           mkosi -d debian -r trixie summary --no-pager
