--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -22,6 +22,16 @@ jobs:
       - name: build server
         run: |
           make
+      - name: Upload Artifact - Server
+        uses: actions/upload-artifact@v4
+        with:
+          name: DayoServer.raw # NOTE: same artifact name
+          path: mkosi.output/DayoServer.raw
       - name: build desktop
         run: |
           make desktop
+      - name: Upload Artifact - Desktop
+        uses: actions/upload-artifact@v4
+        with:
+          name: DayoDesktop.raw # NOTE: same artifact name
+          path: mkosi.output/DayoDesktop.raw
