--- a/saved/serverupdate/mkosi.conf
+++ b/saved/serverupdate/mkosi.conf
@@ -1,38 +1,13 @@
-# SPDX-License-Identifier: LGPL-2.1-or-later
-
-[Build]
-History=yes
-CacheDirectory=mkosi.cache
-Incremental=yes
-
-[Distribution]
-Distribution=debian
-Release=trixie
-RepositoryKeyCheck=no
-Repositories=main,contrib,non-free,non-free-firmware
+[Config]
+Dependencies=desktop
 
 [Output]
 Format=disk
 ImageId=DayoServer
 ManifestFormat=json
 Output=%i_%v_%a
-SplitArtifacts=no
+SplitArtifacts=uki,partitions
 ManifestFormat=json
-OutputDirectory=mkosi.output
-
-
-[Runtime]
-RuntimeSize=30G
-RAM=4G
-CPUs=4
-TPM=no
-QemuArgs=-full-screen
-Ephemeral=yes
-RuntimeScratch=no
-
-[Config]
-Dependencies=base
-
 
 [Content]
 Locale=en_US.UTF-8
