fix: change qemu, add notes

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -26,7 +26,6 @@ RuntimeSize=30G
 RAM=4G
 CPUs=4
 TPM=no
-QemuArgs=-full-screen
 Ephemeral=yes
 RuntimeScratch=no
 
@@ -40,7 +39,8 @@ Keymap=us
 RootShell=/bin/bash
 RootPassword=toor
 CleanPackageMetadata=no
-UnifiedKernelImages=unsigned
+ShimBootloader=unsigned
+UnifiedKernelImages=auto
 UnifiedKernelImageFormat=%i_%v
 KernelCommandLine=rw mount.usr=PARTLABEL=%i_%v logo.nologo security=none audit=0 mitigations=off
 BaseTrees=%O/base
