--- a/mkosi.images/base/mkosi.extra/usr/lib/tmpfiles.d/etc.conf
+++ b/mkosi.images/base/mkosi.extra/usr/lib/tmpfiles.d/etc.conf
@@ -5,3 +5,5 @@
 L /etc/os-release - - - - ../usr/lib/os-release
 # mtab needs to be refreshed on every boot.
 L+ /etc/mtab - - - - ../proc/self/mounts
+
+L /etc/systemd/network/89-ethernet.network - - - - ../usr/lib/systemd/network/89-ethernet.network.example
