whoa: it works well

--- a/mkosi.conf
+++ b/mkosi.conf
@@ -16,7 +16,7 @@ Format=disk
 ImageId=DayoServer
 ManifestFormat=json
 Output=%i_%v_%a
-SplitArtifacts=no
+SplitArtifacts=uki,partitions
 ManifestFormat=json
 OutputDirectory=mkosi.output
 
