fix: build, ethernet

--- a/mkosi.images/base/mkosi.extra/usr/lib/tmpfiles.d/etc.conf
+++ b/mkosi.images/base/mkosi.extra/usr/lib/tmpfiles.d/etc.conf
@@ -6,7 +6,7 @@ L /etc/os-release - - - - ../usr/lib/os-release
 # mtab needs to be refreshed on every boot.
 L+ /etc/mtab - - - - ../proc/self/mounts
 
-L /etc/systemd/network/89-ethernet.network - - - - ../usr/lib/systemd/network/89-ethernet.network.example
+L /etc/systemd/network/89-ethernet.network - - - - /usr/lib/systemd/network/89-ethernet.network.example
 
 # Debian/Ubuntu PAM patches break /usr/lib/pam.d/ so symlink to /etc/
 L? /etc/pam.d - - - - /usr/lib/pam.d
