--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -29,12 +29,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: DayoServer.raw # NOTE: same artifact name
-          path: mkosi.output/DayoServer*.raw
-      - name: build desktop
-        run: |
-          make desktop
-      - name: Upload Artifact - Desktop
-        uses: actions/upload-artifact@v4
-        with:
-          name: DayoDesktop.raw # NOTE: same artifact name
-          path: mkosi.output/DayoDesktop.raw
+          path: mkosi.output/
