--- a/mkosi.conf.d/10-debian.conf
+++ b/mkosi.conf.d/10-debian.conf
@@ -1,6 +1,6 @@
 [Distribution]
 Distribution=debian
-Release=trixie
+Release=testing
 RepositoryKeyCheck=no
 Repositories=main,contrib,non-free,non-free-firmware
 
