--- a/saved/desktop/mkosi.conf
+++ b/saved/desktop/mkosi.conf
@@ -1,9 +1,16 @@
 [Config]
 Dependencies=base
 
+[Match]
+Profiles=desktop
+
 [Output]
-Format=directory
-ImageVersion=
+Format=disk
+ImageId=DayoDesktop
+ManifestFormat=json
+Output=DayoDesktop_%v_%a
+SplitArtifacts=uki,partitions
+ManifestFormat=json
 
 [Content]
 Bootable=no
@@ -18,7 +25,6 @@ Packages=
         power-profiles-daemon
         accountsservice
         upower
-        rtkit
 
         # task-desktop + gnome + gdm3
         task-gnome-desktop
