--- a/mkosi.images/base/mkosi.extra/usr/lib/repart.d/40-root.conf
+++ b/mkosi.images/base/mkosi.extra/usr/lib/repart.d/40-root.conf
@@ -2,7 +2,10 @@
 
 [Partition]
 Type=root
-Format=ext4
+Format=btrfs
 SizeMinBytes=1G
 Weight=20000
+Subvolumes=/var
 MakeDirectories=/var/log/journal
+FactoryReset=yes
+Label=%M-root
