--- a/mkosi.profiles/obs/mkosi.conf.d/debian.conf
+++ b/mkosi.profiles/obs/mkosi.conf.d/debian.conf
@@ -2,7 +2,7 @@
 
 [Match]
 Distribution=debian
-Release=testing
+Release=trixie
 
 [Build]
 SandboxTrees=debian.sources:/etc/apt/sources.list.d/systemd.sources
