--- a/mkosi.conf
+++ b/mkosi.conf
@@ -14,10 +14,9 @@ Repositories=main,contrib,non-free,non-free-firmware
 [Output]
 Format=disk
 ImageId=DayoServer
-ManifestFormat=json
+ManifestFormat=json,changelog
 Output=%i_%v_%a
 SplitArtifacts=uki,partitions
-ManifestFormat=json
 OutputDirectory=mkosi.output
 
 
@@ -28,9 +27,6 @@ CPUs=4
 TPM=no
 Ephemeral=yes
 RuntimeScratch=no
-
-[Config]
-Dependencies=base
 
 
 [Content]
