--- a/mkosi.images/confext-qemu-agent/mkosi.conf
+++ b/mkosi.images/confext-qemu-agent/mkosi.conf
@@ -1,5 +1,5 @@
 [Config]
-Dependencies=base,.dep-libvirt
+Dependencies=base
 
 [Output]
 Format=confext
@@ -8,4 +8,4 @@ Overlay=yes
 [Content]
 Bootable=no
 BaseTrees=%O/base
-ExtraTrees=%O/.dep-libvirt
+Packages=qemu-guest-agent
