--- a/mkosi.images/sysext-qemu-agent/mkosi.conf
+++ b/mkosi.images/sysext-qemu-agent/mkosi.conf
@@ -1,11 +1,12 @@
 [Config]
-Dependencies=base,confext-libvirt
+Dependencies=base,confext-qemu-agent
 
 [Output]
 Format=sysext
 Overlay=yes
+ManifestFormat=json
 
 [Content]
 Bootable=no
 BaseTrees=%O/base
-ExtraTrees=%O/.dep-libvirt
+Packages=qemu-guest-agent
